7903270: Util classes should be final and have a private constructor
Reviewed-by: sundar