@@ -48,7 +48,7 @@ class ToplevelBuilder extends JavaSourceBuilder {
     private int declCount;
     private final List<JavaSourceBuilder> builders = new ArrayList<>();
     private SplitHeader lastHeader;
-    private RootConstants rootConstants;
+    private final RootConstants rootConstants;
     private int headersCount;
     private final ClassDesc headerDesc;
 
@@ -75,8 +75,7 @@ class ToplevelBuilder extends JavaSourceBuilder {
         builders.add(rootConstants);
         List<JavaFileObject> files = new ArrayList<>();
         files.addAll(builders.stream()
-                .flatMap(b -> b.toFiles().stream())
-                .collect(Collectors.toList()));
+                .flatMap(b -> b.toFiles().stream()).toList());
         return files;
     }
 
@@ -128,7 +127,17 @@ class ToplevelBuilder extends JavaSourceBuilder {
     @Override
     public StructBuilder addStruct(String name, Declaration parent, GroupLayout layout, Type type) {
         String structName = name.isEmpty() ? parent.name() : name;
-        StructBuilder structBuilder = new StructBuilder(this, structName, layout, type);
+        StructBuilder structBuilder = new StructBuilder(this, structName, layout, type) {
+            @Override
+            boolean isClassFinal() {
+                return false;
+            }
+
+            @Override
+            void emitConstructor() {
+                // None...
+            }
+        };
         builders.add(structBuilder);
         return structBuilder;
     }
@@ -166,7 +175,7 @@ class ToplevelBuilder extends JavaSourceBuilder {
 
         @Override
         String mods() {
-            return " ";
+            return "final ";
         }
     }
 
@@ -178,13 +187,12 @@ class ToplevelBuilder extends JavaSourceBuilder {
 
         @Override
         String mods() {
-            return "public ";
+            return "public final ";
         }
 
         @Override
         void classBegin() {
             super.classBegin();
-            emitConstructor();
             // emit basic primitive types
             emitPrimitiveTypedef(Type.primitive(Type.Primitive.Kind.Bool), "C_BOOL");
             emitPrimitiveTypedef(Type.primitive(Type.Primitive.Kind.Char), "C_CHAR");
@@ -195,16 +203,6 @@ class ToplevelBuilder extends JavaSourceBuilder {
             emitPrimitiveTypedef(Type.primitive(Type.Primitive.Kind.Float), "C_FLOAT");
             emitPrimitiveTypedef(Type.primitive(Type.Primitive.Kind.Double), "C_DOUBLE");
             emitPointerTypedef("C_POINTER");
-        }
-
-        void emitConstructor() {
-            incrAlign();
-            indent();
-            append("/* package-private */ ");
-            append(className());
-            append("() {}");
-            append('\n');
-            decrAlign();
         }
 
         @Override
@@ -237,28 +235,40 @@ class ToplevelBuilder extends JavaSourceBuilder {
         }
 
         @Override
+        String mods() {
+            return "final "; // Constants$root package-private!
+        }
+
+        @Override
         protected String primitiveLayoutString(ValueLayout vl) {
             if (vl.carrier() == boolean.class) {
                 return "JAVA_BOOLEAN";
             } else if (vl.carrier() == char.class) {
-                return "JAVA_CHAR.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_CHAR" + withBitAlignmentIfNeeded(ValueLayout.JAVA_CHAR, vl);
             } else if (vl.carrier() == byte.class) {
                 return "JAVA_BYTE";
             } else if (vl.carrier() == short.class) {
-                return "JAVA_SHORT.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_SHORT" + withBitAlignmentIfNeeded(ValueLayout.JAVA_SHORT, vl);
             } else if (vl.carrier() == int.class) {
-                return "JAVA_INT.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_INT" + withBitAlignmentIfNeeded(ValueLayout.JAVA_INT, vl);
             } else if (vl.carrier() == float.class) {
-                return "JAVA_FLOAT.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_FLOAT" + withBitAlignmentIfNeeded(ValueLayout.JAVA_FLOAT, vl);
             } else if (vl.carrier() == long.class) {
-                return "JAVA_LONG.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_LONG" + withBitAlignmentIfNeeded(ValueLayout.JAVA_LONG, vl);
             } else if (vl.carrier() == double.class) {
-                return "JAVA_DOUBLE.withBitAlignment(" + vl.bitAlignment() + ")";
+                return "JAVA_DOUBLE" + withBitAlignmentIfNeeded(ValueLayout.JAVA_DOUBLE, vl);
             } else if (vl.carrier() == MemorySegment.class) {
                 return "ADDRESS.withBitAlignment(" + vl.bitAlignment() + ").asUnbounded()";
             } else {
                 return "MemoryLayout.paddingLayout(" + vl.bitSize() +  ")";
             }
+        }
+
+        String withBitAlignmentIfNeeded(ValueLayout original, ValueLayout actual) {
+            if (original.bitAlignment() == actual.bitAlignment()) {
+                return "";
+            }
+            return ".withBitAlignment(" + actual.bitAlignment() + ")";
         }
 
         private Constant addPrimitiveLayout(String javaName, ValueLayout layout) {
@@ -269,7 +279,7 @@ class ToplevelBuilder extends JavaSourceBuilder {
         }
 
         private Constant addPrimitiveLayout(String javaName, Type.Primitive.Kind kind) {
-            return addPrimitiveLayout(javaName, (ValueLayout)kind.layout().get());
+            return addPrimitiveLayout(javaName, (ValueLayout)kind.layout().orElseThrow());
         }
 
         private ValueLayout layoutNoName(ValueLayout layout) {
@@ -298,16 +308,24 @@ class ToplevelBuilder extends JavaSourceBuilder {
                 constantBuilder.classEnd();
             }
             constant_counter = 0;
-            constantBuilder = new ConstantBuilder(this, "constants$" + constant_class_index++) {
-                @Override
-                String mods() {
-                    return ""; // constants package-private!
-                }
-            };
+            constantBuilder = new ConstantsSequelBuilder(this, "constants$" + constant_class_index++);
             constantBuilders.add(constantBuilder);
             constantBuilder.classBegin();
         }
         constantConsumer.accept(constantBuilder);
         constant_counter++;
     }
+
+    static final class ConstantsSequelBuilder extends ConstantBuilder {
+
+        ConstantsSequelBuilder(JavaSourceBuilder enclosing, String className) {
+            super(enclosing, className);
+        }
+
+        @Override
+        String mods() {
+            return "final "; // constants package-private!
+        }
+    }
+
 }
